--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@ body {
   background-repeat: no-repeat;
   background-position: top center;
   background-size: cover;
+  height: 100vh;
 }
 body * {
   font-family: "Inter", sans-serif;
@@ -146,4 +147,14 @@ footer {
   padding: 24px 0;
   text-align: center;
   font-size: 14px;
+}
+/*media queries*/
+
+@media (min-width:700px){
+  :root{
+    --bg-url: url(bg-desktop.jpg);
+  }
+  .light{
+    --bg-url: url(bg-desktop-light.jpg);
+  }
 }
