--- a/style.css
+++ b/style.css
@@ -3,18 +3,20 @@
   padding: 0;
   box-sizing: border-box;
 }
+
 :root {
   --text-color: white;
-  --bg-url: url(./bg-mobile.jpg);
+  --bg-url: url(./img/bg-mobile.jpg);
   --stroke-color: rgba(255, 255, 255, 0.5);
   --surface-color: rgba(255, 255, 255, 0.05);
   --surface-color-hover: rgba(0, 0, 0, 0.02);
   --highlight-color: rgba(255, 255, 255, 0.2);
   --switch-bg-url: url(moon-stars.svg);
 }
+
 .light {
   --text-color: black;
-  --bg-url: url(bg-mobile-light.jpg);
+  --bg-url: url(./img/bg-mobile-light.jpg);
   --stroke-color: rgba(0, 0, 0, 0.5);
   --surface-color: rgba(0, 0, 0, 0.05);
   --surface-color-hover: rgba(0, 0, 0, 0.02);
@@ -29,19 +31,23 @@ body {
   background-size: cover;
   height: 100vh;
 }
+
 body * {
   font-family: "Inter", sans-serif;
   color: var(--text-color);
 }
+
 a {
   text-decoration: none;
 }
+
 #container {
   width: 100%;
   max-width: 588px;
   margin: 56px auto 0px;
   padding: 0 24px;
 }
+
 /*profile*/
 #profile {
   text-align: center;
@@ -52,11 +58,13 @@ a {
   width: 112px;
   border-radius: 53px 53px;
 }
+
 #profile p {
   font-weight: 500;
   line-height: 24px;
   margin-top: 8px;
 }
+
 /*switch*/
 
 #switch {
@@ -64,6 +72,7 @@ a {
   width: 64px;
   margin: 4px auto;
 }
+
 #switch button {
   width: 32px;
   height: 32px;
@@ -79,12 +88,15 @@ a {
 
   animation: slid-back .70s;
 }
+
 .light #switch button {
- animation: slide-in .7s forwards;
+  animation: slide-in .7s forwards;
 }
-#switch button:hover{
+
+#switch button:hover {
   outline: 8px solid var(--highlight-color);
 }
+
 #switch span {
   display: block;
   width: 64px;
@@ -104,6 +116,7 @@ ul {
   gap: 16px;
   padding: 10px 0px;
 }
+
 ul li a {
   display: flex;
   align-items: center;
@@ -122,10 +135,12 @@ ul li a {
   transition: background 0.2s;
   /* transition: all 0.5s;*/
 }
+
 ul li a:hover {
   background: var(--surface-color-hover);
   border: 1.5px solid var(--text-color);
 }
+
 /*social links*/
 
 #social-links {
@@ -135,6 +150,7 @@ ul li a:hover {
   padding: 24px 0;
   font-size: 24px;
 }
+
 #social-links a {
   display: flex;
   align-items: center;
@@ -144,37 +160,47 @@ ul li a:hover {
   transition: background 0.2;
   border-radius: 50%;
 }
+
 #social-links a :hover {
   background: var(--highlight-color);
- 
+
 }
+
 footer {
   padding: 24px 0;
   text-align: center;
   font-size: 14px;
 }
+
 /*media queries*/
 
-@media (min-width:700px){
-  :root{
-    --bg-url: url(bg-desktop.jpg);
+@media (min-width:700px) {
+  :root {
+    --bg-url: url(./img/bg-desktop.jpg);
   }
-  .light{
-    --bg-url: url(bg-desktop-light.jpg);
+
+  .light {
+    --bg-url: url(./img/bg-desktop-light.jpg);
   }
 }
+
 /*ANIMAÇÕES*/
-@keyframes slide-in{
-  from{
+@keyframes slide-in {
+  from {
     left: 0;
-  }to{
-    left:50%;
+  }
+
+  to {
+    left: 50%;
   }
 }
-@keyframes slid-back{
-  from{
+
+@keyframes slid-back {
+  from {
     left: 50%;
-  }to{
+  }
+
+  to {
     left: 0;
   }
 }
